<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragments.NotificationFrag">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_testing"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/edtAccessToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:elevation="10dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/round_edit_text"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:text="@string/access_token"
        android:textColorHint="@color/black"
        android:layout_gravity="center_horizontal"
        tools:ignore="HardcodedText" />

    <!-- <EditText
         android:id="@+id/edtMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
         android:elevation="10dp"
         android:layout_marginHorizontal="16dp"
         android:background="@drawable/round_edit_text"
         android:layout_marginTop="20dp"
         android:textColor="@color/black"
         android:hint="Message"
         android:inputType="text"
         android:textColorHint="@color/black"
         android:layout_gravity="center_horizontal"
         tools:ignore="HardcodedText" />-->


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        app:elevation="20dp"
        android:background="@drawable/round_edit_text"
        android:elevation="20dp"
        android:padding="16dp"
        android:text="@string/send"
        android:textColor="@color/white"
        app:backgroundTint="#0385CF"
        tools:ignore="HardcodedText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTranslate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        app:elevation="20dp"
        android:background="@drawable/round_edit_text"
        android:elevation="20dp"
        android:padding="16dp"
        android:text="@string/change_language"
        android:textColor="@color/white"
        app:backgroundTint="#0385CF"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:text="@string/text"/>


</LinearLayout>